[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/3.png" type="Texture" id=1]
[ext_resource path="res://sprites/4.png" type="Texture" id=2]
[ext_resource path="res://sprites/2.png" type="Texture" id=3]
[ext_resource path="res://scripts/ScoreLayer.gd" type="Script" id=4]

[node name="CenterContainer" type="CenterContainer"]
margin_left = -128.0
margin_top = -64.0
margin_right = 128.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 9.0
margin_top = 7.0
margin_right = 246.0
margin_bottom = 121.0
rect_pivot_offset = Vector2( 118, 57 )

[node name="Digit1" type="TextureRect" parent="HBoxContainer"]
margin_right = 69.0
margin_bottom = 114.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Digit2" type="TextureRect" parent="HBoxContainer"]
margin_left = 73.0
margin_right = 146.0
margin_bottom = 114.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Digit3" type="TextureRect" parent="HBoxContainer"]
margin_left = 150.0
margin_right = 237.0
margin_bottom = 114.0
texture = ExtResource( 2 )
